docs/vocabulary/_sources/type/TextDocument/v1/index.rst.txt
:orphan:

TextDocument (v1)
=================

.. warning::
   This is not the latest version. The latest version is :doc:`v2 <../v2/index>`.

- **Previous Version:** none *(this is the oldest version)*
- **URI:** `http://clams.ai/vocabulary/type/TextDocument/v1 <http://clams.ai/vocabulary/type/TextDocument/v1>`_
- **Shortname:** ``TextDocument``
- **Inherits from:** :doc:`Document (v1) <../../Document/v1/index>`
- **Included in:** :doc:`1.0.0 <../../../1.0.0/index>`, :doc:`1.0.1 <../../../1.0.1/index>`, :doc:`1.0.2 <../../../1.0.2/index>`, :doc:`1.0.3 <../../../1.0.3/index>`, :doc:`1.0.4 <../../../1.0.4/index>`, :doc:`1.1.0 <../../../1.1.0/index>`, :doc:`1.1.1 <../../../1.1.1/index>`, :doc:`1.1.2 <../../../1.1.2/index>`, :doc:`1.1.3 <../../../1.1.3/index>`
- **Also Known As:** This type is also accessible at the following legacy URLs for backward compatibility:

  - `http://mmif.clams.ai/vocabulary/TextDocument/v1 <http://mmif.clams.ai/vocabulary/TextDocument/v1>`_
  - `http://mmif.clams.ai/0.4.0/vocabulary/TextDocument/ <http://mmif.clams.ai/0.4.0/vocabulary/TextDocument/>`_
  - `http://mmif.clams.ai/0.4.1/vocabulary/TextDocument/ <http://mmif.clams.ai/0.4.1/vocabulary/TextDocument/>`_
  - `http://mmif.clams.ai/0.4.2/vocabulary/TextDocument/ <http://mmif.clams.ai/0.4.2/vocabulary/TextDocument/>`_

Description
-----------

A text document.


Properties
----------

Synopsis
^^^^^^^^

*Properties marked with* **\*** *are required.*

.. list-table::
   :header-rows: 1
   :widths: 40 40 20
   :align: left

   * - Property
     - Type
     - Origin
   * - :ref:`TextDocument-v1-text`
     - object
     - *native*
   * - :ref:`TextDocument-v1-location`
     - string
     - :doc:`Document (v1) <../../Document/v1/index>`
   * - :ref:`TextDocument-v1-mime`
     - string
     - :doc:`Document (v1) <../../Document/v1/index>`
   * - :ref:`TextDocument-v1-id` **\***
     - string
     - :doc:`Thing (v1) <../../Thing/v1/index>`


Native
^^^^^^


.. _TextDocument-v1-text:

``text``
""""""""

- type: *object*
- required: no

A JSON-LD value object which has a *@value* and a *@language* property.

.. raw:: html

   <hr style="border: none; border-top: 1px solid var(--color-background-border);">


Inherited from :doc:`Document (v1) <../../Document/v1/index>`
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


.. _TextDocument-v1-location:

``location``
""""""""""""

- type: *string*
- required: no

The location of an external file.

.. raw:: html

   <hr style="border: none; border-top: 1px solid var(--color-background-border);">


.. _TextDocument-v1-mime:

``mime``
""""""""

- type: *string*
- required: no

The MIME type of the document, only used when the *location* property is used.

.. raw:: html

   <hr style="border: none; border-top: 1px solid var(--color-background-border);">


Inherited from :doc:`Thing (v1) <../../Thing/v1/index>`
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


.. _TextDocument-v1-id:

``id``
""""""

- type: *string*
- required: yes

A unique identifier for the annotation or document. Uniqueness is relative to the view the annotation is in or the list of documents at the top level of a MMIF file.

.. raw:: html

   <hr style="border: none; border-top: 1px solid var(--color-background-border);">


JSON Schema
-----------

.. code-block:: json

   {
     "additionalProperties": true,
     "properties": {
       "id": {
         "description": "A unique identifier for the annotation or document. Uniqueness is relative to the view the annotation is in or the list of documents at the top level of a MMIF file.",
         "type": "string"
       },
       "location": {
         "type": "string",
         "description": "The location of an external file."
       },
       "mime": {
         "type": "string",
         "description": "The MIME type of the document, only used when the *location* property is used."
       },
       "text": {
         "additionalProperties": true,
         "type": "object",
         "description": "A JSON-LD value object which has a *@value* and a *@language* property."
       }
     },
     "required": [
       "id"
     ],
     "type": "object"
   }